--- a/Google Search TrackerUrl/MainWindow.xaml
+++ b/Google Search TrackerUrl/MainWindow.xaml
@@ -1,12 +1,21 @@
-﻿<Window x:Class="Google_Search_TrackerUrl.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Google_Search_TrackerUrl"
+        xmlns:eo="http://schemas.essentialobjects.com/wpf/" x:Class="Google_Search_TrackerUrl.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="366" Width="549">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <eo:WebControl x:Name="WebBrw" Grid.Row="1"/>
+        <Button x:Name="BtnLoadAndSearch" Content="Load Google And Search" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" Width="187" Click="BtnLoadAndSearch_Click"/>
+        <Button x:Name="BtnGetTrackerUrl" Content="GetTrackerUrl" HorizontalAlignment="Left" Height="30" Margin="202,10,0,0" VerticalAlignment="Top" Width="110" Click="BtnGetTrackerUrl_Click"/>
+
     </Grid>
 </Window>
